Fix result modal not showing due to refresh timing

--- a/client/src/components/dashboard/admin/UnitRequestsTable.module.css
+++ b/client/src/components/dashboard/admin/UnitRequestsTable.module.css
@@ -16,3 +16,12 @@
 .rejectButton:hover {
   color: #ff0000;
 }
+
+.errorHeading i,
+.errorMessage {
+  color: var(--alizarin-crimson-color) !important;
+}
+
+.successMessage {
+  color: var(--pine-green-color) !important;
+}
